Removed unneeded div.  Fixed overflow issue between lists in the workshop information and the workshop slideshow.

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -663,7 +663,7 @@ ul[data-clearing] li.clearing-feature ~ li { display: none; }
 .clearing-assembled .clearing-container ul[data-clearing] li img { cursor: pointer !important; min-width: 100% !important; }
 .clearing-assembled .clearing-container ul[data-clearing] li.visible { border-top: 4px solid white; }
 .gallery-wrapper{
-   width:35%; float:left; margin-right:15px; border:solid 2px green; padding:2px;
+   width:35%; float:left; margin-right:35px; border:solid 2px green; padding:2px;
 }
 ul.gallery{
    overflow: hidden;
